ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/NFGnewPage__c.object-meta.xml
<CustomObject>
    <description>NEW web page data from NFG, aka &quot;Everyday Giving&quot; website page.</description>
    <label>NFGnewPage</label>
    <nameField>
        <displayFormat>NFG-new-{000000}</displayFormat>
        <label>NFGnewPage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NFGnewPages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>