ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/additional_instructions__c.field-meta.xml
<CustomField>
    <fullName>additional_instructions__c</fullName>
    <label>additional_instructions</label>
    <length>250</length>
    <type>Text</type>
</CustomField>