ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/affiliation__c.field-meta.xml
<CustomField>
    <fullName>affiliation__c</fullName>
    <label>affiliation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>