ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/amount_you_receive__c.field-meta.xml
<CustomField>
    <fullName>amount_you_receive__c</fullName>
    <label>amount_you_receive</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>