ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/appeal_code__c.field-meta.xml
<CustomField>
    <fullName>appeal_code__c</fullName>
    <label>appeal_code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>