ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/billing_name__c.field-meta.xml
<CustomField>
    <fullName>billing_name__c</fullName>
    <label>billing_name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>