ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/card_last4__c.field-meta.xml
<CustomField>
    <fullName>card_last4__c</fullName>
    <label>card_last4</label>
    <length>6</length>
    <type>Text</type>
</CustomField>