ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/card_type__c.field-meta.xml
<CustomField>
    <fullName>card_type__c</fullName>
    <label>card_type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>