ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>city</label>
    <length>30</length>
    <type>Text</type>
</CustomField>