ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/display_my_donation__c.field-meta.xml
<CustomField>
    <fullName>display_my_donation__c</fullName>
    <label>display_my_donation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>