ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/donor_acknowledge_as__c.field-meta.xml
<CustomField>
    <fullName>donor_acknowledge_as__c</fullName>
    <label>donor_acknowledge_as</label>
    <length>80</length>
    <type>Text</type>
</CustomField>