ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/donor_last_name__c.field-meta.xml
<CustomField>
    <fullName>donor_last_name__c</fullName>
    <label>donor_last_name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>