ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/donor_phone_number__c.field-meta.xml
<CustomField>
    <fullName>donor_phone_number__c</fullName>
    <label>donor_phone_number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>