ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/donor_phone_number_type__c.field-meta.xml
<CustomField>
    <fullName>donor_phone_number_type__c</fullName>
    <label>donor_phone_number_type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>