ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/email_address__c.field-meta.xml
<CustomField>
    <fullName>email_address__c</fullName>
    <label>email_address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>