ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/entity_identifier__c.field-meta.xml
<CustomField>
    <fullName>entity_identifier__c</fullName>
    <label>entity_identifier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>