ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/gateway_transaction_id__c.field-meta.xml
<CustomField>
    <fullName>gateway_transaction_id__c</fullName>
    <label>gateway_transaction_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>