ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/gift_allocation_code__c.field-meta.xml
<CustomField>
    <fullName>gift_allocation_code__c</fullName>
    <inlineHelpText>101=Invest in our mission; 102=LGCN; 103=Nuestro Futuro Fund; 104=Gala; 105=Endowment; 106=Latinas in Tech(external group); 107=Latinos in Finance(external group)</inlineHelpText>
    <label>gift_allocation_code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>