ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/gift_allocation_designation_name__c.field-meta.xml
<CustomField>
    <fullName>gift_allocation_designation_name__c</fullName>
    <label>gift_allocation_designation_name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>