ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/gift_amount__c.field-meta.xml
<CustomField>
    <fullName>gift_amount__c</fullName>
    <label>gift_amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>