ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/gift_date__c.field-meta.xml
<CustomField>
    <fullName>gift_date__c</fullName>
    <label>gift_date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>