ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/grad_year__c.field-meta.xml
<CustomField>
    <fullName>grad_year__c</fullName>
    <label>grad_year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>