ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/other_describe__c.field-meta.xml
<CustomField>
    <fullName>other_describe__c</fullName>
    <label>other_describe</label>
    <length>250</length>
    <type>Text</type>
</CustomField>