ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/recurring__c.field-meta.xml
<CustomField>
    <fullName>recurring__c</fullName>
    <label>recurring</label>
    <length>20</length>
    <type>Text</type>
</CustomField>