ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/recurring_end_date__c.field-meta.xml
<CustomField>
    <fullName>recurring_end_date__c</fullName>
    <label>recurring_end_date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>