ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/transaction_id__c.field-meta.xml
<CustomField>
    <fullName>transaction_id__c</fullName>
    <label>transaction_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>