ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/tribute__c.field-meta.xml
<CustomField>
    <fullName>tribute__c</fullName>
    <label>tribute</label>
    <length>30</length>
    <type>Text</type>
</CustomField>