ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/tribute_notify__c.field-meta.xml
<CustomField>
    <fullName>tribute_notify__c</fullName>
    <label>tribute_notify</label>
    <length>20</length>
    <type>Text</type>
</CustomField>