ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <label>utm_campaign</label>
    <length>10</length>
    <type>Text</type>
</CustomField>