ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <label>utm_content</label>
    <length>10</length>
    <type>Text</type>
</CustomField>