ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <label>utm_medium</label>
    <length>10</length>
    <type>Text</type>
</CustomField>