ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <label>utm_term</label>
    <length>10</length>
    <type>Text</type>
</CustomField>