ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/fields/zipcode__c.field-meta.xml
<CustomField>
    <fullName>zipcode__c</fullName>
    <label>zipcode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>