ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGnewPage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>gift_date__c</columns>
    <columns>gift_amount__c</columns>
    <columns>donor_first_name__c</columns>
    <columns>donor_last_name__c</columns>
    <columns>billing_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>